--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # node modules and cache
 node_modules/
 .cache/
+/.gitmodules
 
 # system files
 .DS_Store
@@ -15,3 +16,5 @@ build/
 
 # sensitive files
 .env
+node_modules/ 
+.cache/ 
