--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "dest": "/backend/index.js"
       },
       {
