--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "headers": { "Cache-Control": "no-store" },
+      "dest": "/index.html"
     }
   ]
 }
