--- a/vercel.json
+++ b/vercel.json
@@ -8,20 +8,16 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "config": { "distDir": "build" }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "dest": "backend/index.js"
     },
     {
       "src": "/(.*)",
-      "headers": { "Cache-Control": "no-store" },
       "dest": "/index.html"
     }
   ]
